--- a/imagens/desafio012.html
+++ b/imagens/desafio012.html
@@ -1,6 +1,15 @@
-Cordel Moderno
-Por Milton Duarte
-[SITE: https://www.recantodasletras.com.br/poesias/3186743]
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cordel moderno</title>
+</head>
+<body>
+    <header>
+        Cordel Moderno
+        Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
+    </header>
 
     Estou ficando cansado
     Da tal tecnologia
@@ -65,3 +74,9 @@ Por Milton Duarte
     Dois pontos são dois joelhos
     Seus lábios são aparelhos
     Deixe que Deus interprete.
+
+        <footer>
+            <p>Site criado por <a href="https://github.com/devcarlosciato" target="_blank">Devciato</a></p>
+        </footer>
+</body>
+</html>
